# amazon-kinesis-video-streams-producer-sdk-cpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  RELEASE_NOTES.md  close-stale-issues.yml  cm-file  codecov.yml  gen_json.py  install-instructions-linux.md  install-instructions-macos.md  install-instructions-windows-msvc.md  install-instructions-windows-msys2.md  kvs_log_configuration  meson-config.txt  param.json
kinesis-video-c-producer/: CMakeLists.txt
kinesis-video-c-producer/samples/: KvsAacAudioVideoStreamingSample.c  KvsVideoOnlyStreamingSample.c
kinesis-video-c-producer/src/: CMakeLists.txt
kinesis-video-c-producer/tst/: AuthCallbackTest.cpp  AwsCredentialsTest.cpp  CMakeLists.txt  CallbacksProviderApiFunctionalityTest.cpp  CallbacksProviderApiTest.cpp  CallbacksProviderPublicApiTest.cpp  FileLoggerFunctionalityTest.cpp  InfoProviderApiTest.cpp  PlatformCallbackProviderApiTest.cpp  ProducerApiCallCacheTest.cpp  ProducerApiTest.cpp  ProducerBasicUsageTest.cpp  ProducerCallbackProviderApiTest.cpp  ProducerClientBasicTest.cpp  ProducerClientFaultInjectionTest.cpp  ProducerContinuousRetryTest.cpp  ProducerFunctionalityTest.cpp  ProducerTestFixture.cpp  ProducerTestFixture.h  RotatingStaticAuthCallbacks.cpp  RotatingStaticAuthCallbacks.h
kinesis-video-gstreamer-plugin/: CMakeLists.txt  sample_rotating_credential  sample_static_credential
kinesis-video-gstreamer-plugin/configuration/: kvs_log_configuration
kinesis-video-gstreamer-plugin/demo/: kvs_producer_plugin_demo.cpp  kvs_producer_plugin_rtsp_demo.cpp
kinesis-video-gstreamer-plugin/demo-src/: kvs_producer_plugin_demo.cpp  kvs_producer_plugin_rtsp_demo.cpp
kinesis-video-gstreamer-plugin/plugin-src/: ConnectionStaleStateMachine.cpp  ConnectionStaleStateMachine.h  KvsSinkClientCallbackProvider.cpp  KvsSinkClientCallbackProvider.h  KvsSinkCredentialProvider.cpp  KvsSinkCredentialProvider.h  KvsSinkDeviceInfoProvider.cpp  KvsSinkDeviceInfoProvider.h  KvsSinkIotCertCredentialProvider.cpp  KvsSinkIotCertCredentialProvider.h  KvsSinkRotatingCredentialProvider.cpp  KvsSinkRotatingCredentialProvider.h  KvsSinkStaticCredentialProvider.cpp  KvsSinkStaticCredentialProvider.h  KvsSinkStreamCallbackProvider.cpp  KvsSinkStreamCallbackProvider.h  StreamLatencyStateMachine.cpp  StreamLatencyStateMachine.h  config.h  gstkvssink.cpp  gstkvssink.h  gstkvssinkenumproperties.h  gstkvstest.cpp
kinesis-video-gstreamer-plugin/src/: KvsSinkStreamCallbackProvider.cpp  gstkvssink.cpp  gstkvssink.h
kinesis-video-native-build/: CMakeLists.txt  gstreamer-plugin-install-script  install-script  install-script-ami  install-script-common.sh  install-script-mac  java-install-script  kvs_log_configuration  min-install-script  msys2-install-script  vs-buildtools-install.bat  windows-install.bat  windows-java-install.bat
kinesis-video-native-build/webrtc-build/: CMakeLists.txt  webrtc-install-script-common.sh  webrtc-install-script-with-gstreamer-deps.sh  webrtc-install-script.sh  webrtc-min-install-script  webrtc-min-install-script.sh
kinesis-video-pic/: .gitignore  CMakeLists.txt
kinesis-video-pic/src/: CMakeLists.txt
kinesis-video-producer/: CMakeLists.txt
kinesis-video-producer-jni/: .gitignore  CMakeLists.txt
kinesis-video-producer-jni/src/: CMakeLists.txt
kinesis-video-producer/src/: Auth.cpp  Auth.h  AwsV4Signer.cpp  AwsV4Signer.h  CMakeLists.txt  CachingEndpointOnlyCallbackProvider.cpp  CachingEndpointOnlyCallbackProvider.h  CallbackProvider.cpp  CallbackProvider.h  ClientCallbackProvider.h  CurlCallManager.cpp  CurlCallManager.h  DefaultCallbackProvider.cpp  DefaultCallbackProvider.h  DefaultDeviceInfoProvider.cpp  DefaultDeviceInfoProvider.h  DeviceInfoProvider.h  FileOutputCallbackProvider.cpp  FileOutputCallbackProvider.h  GetTime.cpp  KinesisVideoProducer.cpp  KinesisVideoProducer.h  KinesisVideoStream.cpp  KinesisVideoStream.h  KinesisVideoStreamMetrics.h  Logger.h  OngoingPutFrameState.cpp  OngoingPutFrameState.h  OngoingStreamState.cpp  OngoingStreamState.h  OpenSSLThreadCallbacks.cpp  OpenSSLThreadCallbacks.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseAcceptor.h  StreamCallbackProvider.h  StreamDefinition.cpp  StreamDefinition.h  (+5 more)
kinesis-video-producer/tst/: CMakeLists.txt  ProducerApiTest.cpp  ProducerFunctionalityTest.cpp  ProducerTestFixture.cpp  ProducerTestFixture.h  TestDefaultCallbackProvider.cpp  TestDefaultCallbackProvider.h  main.cpp
src/: Auth.cpp  Auth.h  CMakeLists.txt  CachingEndpointOnlyCallbackProvider.cpp  CachingEndpointOnlyCallbackProvider.h  CallbackProvider.cpp  CallbackProvider.h  ClientCallbackProvider.h  DefaultCallbackProvider.cpp  DefaultCallbackProvider.h  DefaultDeviceInfoProvider.cpp  DefaultDeviceInfoProvider.h  DeviceInfoProvider.h  GetTime.cpp  GetTime.h  KinesisVideoProducer.cpp  KinesisVideoProducer.h  KinesisVideoProducerMetrics.h  KinesisVideoStream.cpp  KinesisVideoStream.h  KinesisVideoStreamMetrics.h  Logger.h  StreamCallbackProvider.h  StreamDefinition.cpp  StreamDefinition.h  StreamTags.cpp  StreamTags.h  ThreadSafeMap.h
src/common/: PutFrameHelper.cpp  PutFrameHelper.h
src/credential-providers/: IotCertCredentialProvider.cpp  IotCertCredentialProvider.h  NuveoCredentialProvider.cpp  NuveoCredentialProvider.h  RotatingCredentialProvider.cpp  RotatingCredentialProvider.h
src/gstreamer/: KvsSinkClientCallbackProvider.cpp  KvsSinkClientCallbackProvider.h  KvsSinkDeviceInfoProvider.cpp  KvsSinkDeviceInfoProvider.h  KvsSinkStreamCallbackProvider.cpp  KvsSinkStreamCallbackProvider.h  gstkvssink.cpp  gstkvssink.h
src/source/: ContinuousRetryStreamCallbacks.h  CurlApiCallbacks.c  CurlApiCallbacks.h  DeviceInfoProvider.c  FileLoggerPlatformCallbackProvider.c  FileLoggerPlatformCallbackProvider.h  Include_i.h  IotAuthCallback.c  Request.c  (+5 more)
tst/: CMakeLists.txt  CallbacksProviderApiTest.cpp  FileLoggerFunctionalityTest.cpp  ProducerApiTest.cpp  ProducerBasicUsageTest.cpp  ProducerContinuousRetryTest.cpp  ProducerFunctionalityTest.cpp  ProducerTestFixture.cpp  ProducerTestFixture.h  main.cpp
(+860 files in other folders)
